[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Controle_de_Movimento/movimento_celular.gd" type="Script" id=1]
[ext_resource path="res://addons/Controle_de_Movimento/MeshInstance.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

[node name="Spatial" type="Spatial"]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.24, 0, 0, 0, 0.24, 0, 0, 0, 0.24, 0, 0, 0 )
mesh = SubResource( 1 )
script = ExtResource( 2 )

[node name="ControleDeMovimento" type="Node" parent="MeshInstance"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.88727 )

[connection signal="acelerometro" from="MeshInstance/ControleDeMovimento" to="MeshInstance" method="_on_ControleDeMovimento_acelerometro"]
[connection signal="gyroscopio" from="MeshInstance/ControleDeMovimento" to="MeshInstance" method="_on_ControleDeMovimento_gyroscopio"]
[connection signal="magnetometro" from="MeshInstance/ControleDeMovimento" to="MeshInstance" method="_on_ControleDeMovimento_magnetometro"]
